# yuyv_to_rgb

./: CMakeLists.txt  README.md
pics/: lena.yuv
src/: main.cc
